# dji_rs2_ros_controller

./: .gitmodules  CMakeLists.txt  README.md  package.xml
dji_rs2_ros_controller/: CMakeLists.txt  package.xml
dji_rs2_ros_controller/scripts/: can_bus_controller.py
launch/: gimbal_control.launch
srv/: SendJointPos.srv
