<?xml version="1.0"?>
<package format="2">
  <name>dji_rs2_ros_controller</name>
  <version>0.0.0</version>
  <description>The gimbal_control package</description>

  <maintainer email="cornelius.voneinem@mavt.ethz.ch">Cornelius von Einem</maintainer>

  <license>Apache2.0</license>

  <url type="repository">https://github.com/ceinem/dji_rs2_ros_controller</url>

  <author email="cornelius.voneinem@mavt.ethz.ch">Cornelius von Einem</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>glog_catkin</depend>
  <depend>socketcan_bridge</depend>


</package>
